fixed navbar collapse, polished look for main and added body bg-img

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -1,9 +1,18 @@
 header{
-    background-color: rgb(73, 164, 255);
+    background-color: rgb(241, 72, 72);
 }
 
 .jumbotron{
     background-image: url("/imgs/webdev.jpg");
     background-size: cover;
     height: 500px;
+    box-shadow: 10px 10px 5px rgba(161, 159, 159, 0.753);
+}
+
+.lead{
+    line-height: 50px;
+}
+
+body{
+    background-image: url("/imgs/white-waves.png");
 }
